--- a/WebContent/modal/_confirmacao-consulta.html
+++ b/WebContent/modal/_confirmacao-consulta.html
@@ -6,11 +6,11 @@
 			Os dados informados para a consulta não podem ser alterados posteriormente. <br/>
 			Verifique atentamente os valores informados antes de confirmar o cadastro da consulta.<br/><br/>
 			
-			Para confirmar a inclusão da consulta clique no botão "Confirmar Consulta".
+			Para confirmar a inclusão da consulta clique no botão "Confirmar".
 		</p>
 		
 		<div class="boxactions">
-			<a class="btnadd" id="btnConfirmar">Confirmar Consulta</a>
+			<a class="btnadd" id="btnConfirmar">Confirmar</a>
 			<a class="btnclose modal-close">Cancelar</a>
 	    </div>
     </div>
